--- a/site/index.html
+++ b/site/index.html
@@ -131,7 +131,7 @@
 					<div class="row">
 						<div class="slider-content-area">
 							<div class="slide-text">
-								<h1 class="homepage-three-title">Outstanding <span>Installation</span> Services</h1>
+								<h1 class="homepage-three-title">Whaou Outstanding <span>Installation</span> Services</h1>
 								<h2>With Octank Solutions responsive landing page template, <br>you can promote your all web design & development services. </h2>
 								<div class="slider-content-btn">
 									<a class="button btn btn-light btn-radius btn-brd" href="#">Read More</a>
